# und-eecs590-rl

./: .gitignore  CITATIONS.md  Justfile  README.md  markovprocess.py  pyproject.toml  requirements.txt
M1/code/: markovprocess.py  q5.py  q7-2.py  q7.py
M1/latex/: HajostekMichael_M1.aux
M2/: MichaelHajostek_M2.md  main.py
M3/: reactor_env.py  run_experiments.py  td_agent.py
M3/artifacts/reactor/: qlearning_trained.npz  sarsa_lambda_trained.npz
Minis/M1/code/: README.md  gridworld.py  q4.py
Minis/M1/latex/: HajostekMichael_M1.tex
Minis/M2/: mdp.py  windy_world.py
Minis/M3/: answers.md  fa_agent.py  plots.py  test_smoke.py
Minis/M4/latex/: HajostekMichael_M4.tex
assets/: Zamboni-v1.usd  ice.usd  zamboni.usd
assets/teacher/: coverage_path_v1.npz
docs/: AI_usage.md  decisions.md  isaacsim_setup_issues.md  review_v1_gap_analysis.md  rubric_v1_checklist.md  technical-challenges.md  v1.md  v2.md  v3.md  zamb_gym_env.md
docs/notes/: 2026-02-17-v1-cleanup.md  2026-04-30-capstone-ppo-arc.md  README.md
docs/notes/templates/: concept-note.md  daily-note.md
scripts/: bc_warmstart_zamb_gym.py  compare_belief_bootstrap.py  demo_classical.py  demo_ppo.py  demo_replay_buffer.py  demo_saliency.py  demo_zamb_gym_ppo.py  demo_zamb_isaac_ppo.py  manage_replay.py  run_windy.py  smoke_isaac.py  smoke_zamb_gym_teacher.py  train_zamb_isaac_sb3.py
src/rl590/: __init__.py  cli.py
src/rl590/agents/: __init__.py  planning_agent.py
src/rl590/buffers/: __init__.py  replay_buffer.py
src/rl590/classical/: __init__.py  mc.py  sarsa.py  (+2 more)
tests/: test_planning_smoke.py
(+32 files in other folders)
